--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "engines": {
     "node": ">=12.0.0 <13.0.0"
   },
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc --watch"
+  },
   "devDependencies": {
     "@types/node": "12",
     "typescript": "^4.0.3"
