--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,5 @@
 FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:12
-RUN apt-get update && apt-get install -y vim
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends vim \
+    && rm -rf /var/lib/apt/lists/*
 ENV EDITOR /usr/bin/vim
