--- a/.github/workflows/deploy-to-aws-lambda.yml
+++ b/.github/workflows/deploy-to-aws-lambda.yml
@@ -27,5 +27,5 @@ jobs:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_REGION }}
-          function_name: main
+          function_name: myFunction
           zip_file: ./dist.zip
