--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch": "tsc --watch"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.64",
     "@types/node": "12",
     "typescript": "^4.0.3"
   }
