--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/aws-lambda": "^8.10.64",
     "@types/node": "12",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.775.0"
   }
 }
