--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "aws-sdk": "^2.775.0"
+    "aws-sdk": "^2.775.0",
+    "axios": "^0.20.0"
   }
 }
